# news-emotional-impact

./: .env.example  .gitignore  README.md  pyproject.toml
app/: db.py  feed_sources.py
app/config/: category_tags.py  emotional_impact_tags.py  prompt_config.py  settings.py
app/config/prompt_versions/: v1_config.py  v2_config.py  v3_config.py
app/graph/: graph.py
app/llm/: llm.py
app/prompts/: category-tag-v1.txt  clickbait-score-v1.txt  emotional-impact-tag-v1.txt  headline-sentiment-v1.txt
app/services/: category_analyzer.py  clickbait_analyzer.py  emotional_impact_analyzer.py  feed_parser.py  run_sentiment_analysis.py  sentiment_analyzer.py
app/utils/: html_mods.py
example_feeds/: bbc.xml  breaking-news.xml  evoke.xml  gript.xml  independent.xml  irish-examiner.xml  irish-mirror.xml  irish.examiner.xml  rte.xml  the-journal.xml  the-sun.xml
scripts/: clean_data.py  create_random_samples.py  deduplicate_data.py  export_kaggle_data_supabase_sdk.py
supabase/: config.toml
supabase/migrations/: 20250528061113_init.sql  20250528061344_tags.sql  20250528063006_sql_functions.sql  20250606055144_get_unlinked.sql
